--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,14 +6,19 @@
     padding: 10px;
   }
   
+  .left-button {
+    margin-right: 10px; 
+    margin-left: 200px;  
+  }
+
   .left-button img {
     width: 24px;
-    height: 24px;
+    height: 24px;  
   }
   
   input[type="text"] {
     flex-grow: 1;
-    margin: 0 10px;
+    margin-right: 200px;
     padding: 5px;
     border: none;
     border-radius: 4px;
@@ -27,4 +32,79 @@
   .right-buttons button img {
     width: 24px;
     height: 24px;
+  }
+
+  .product-container {
+    background-color: #2B38B4;
+    width: 93%;
+    height: auto;
+    margin: 50px auto;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+  .product-title {
+    color: white;
+    margin: 0 0 10px 0;
+    font-size: 26px;
+    width: 100%;
+  }
+  
+  .product-item {
+    background-color: #D9D9D9;
+    color: #000;
+    width: calc(33% - 10px);
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+  }
+
+  .product-item img {
+    width: 100%; 
+    height: auto;
+    border-radius: 4px;
+  }
+
+  .product-button {
+    margin-top: 10px;
+    float: right;
+    padding: 5px 10px;
+    background-color: #E59840;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .service-container {
+    background-color: #2B38B4;
+    width: 93%;
+    height: auto;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .service-title {
+    color: white;
+    margin: 0 0 10px 0;
+    font-size: 26px;
+    width: 100%;
+  }
+  
+  .service-item {
+    background-color: #D9D9D9;
+    color: #000;
+    width: calc(33% - 10px);
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
   }
