--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,81 +1,1 @@
-<!--Barra menú-->
-<div class="top-bar">
-  <!--Barra busqueda-->
-  <button class="left-button">
-    <img src="Images/ButtonLens.png">
-  </button>
-  <input type="text" placeholder="Buscar...">
-  
-  <!--Conjunto botones-->
-  <div class="right-buttons">
-    <button>
-      <img src="Images/ButtonNotifications.png">
-    </button>
-    <button>
-      <img src="Images/ButtonConversation.png">
-    </button>
-    <button>
-      <img src="Images/ButtonShopping.png">
-    </button>
-    <button>
-      <img src="Images/ButtonConfig.png">
-    </button>
-  </div>
-</div>
-
-<!-- Contenedor para vender productos -->
-<div class="product-container">
-  <h1 class="product-title">Hardware</h1>
-  <!-- Contenedores de los productos -->
-  <div class="product-item">
-    <h2>Producto 1</h2>
-    <img src="assets/Images/Product1.png" alt="Producto">
-    <button class="product-button">Comprar</button>
-  </div>
-  <div class="product-item">
-    <h2>Producto 2</h2>
-    <img src="assets/Images/Product1.png" alt="Producto">
-    <button class="product-button">Comprar</button>
-  </div>
-  <div class="product-item">
-    <h2>Producto 3</h2>
-    <img src="assets/Images/Product1.png" alt="Producto">
-    <button class="product-button">Comprar</button>
-  </div>
-  <div class="product-item">
-    <h2>Producto 4</h2>
-    <img src="assets/Images/Product1.png" alt="Producto">
-    <button class="product-button">Comprar</button>
-  </div>
-  <div class="product-item">
-    <h2>Producto 5</h2>
-    <img src="assets/Images/Product1.png" alt="Producto">
-    <button class="product-button">Comprar</button>
-  </div>
-  <div class="product-item">
-    <h2>Producto 6</h2>
-    <img src="assets/Images/Product1.png" alt="Producto">
-    <button class="product-button">Comprar</button>
-  </div>
-</div>
-
-  <!-- Contenedor para pedir servicios -->
-<div class="service-container">
-  <h1 class="service-title">Reparaciones</h1>
-  <!-- Contenedores de los servicios -->
-  <div class="service-item">
-    <h2>Producto 1</h2>
-    <img src="assets/Images/Product1.png" alt="Servicio">
-    <button class="product-button">Pedir</button>
-  </div>
-  <div class="service-item">
-    <h2>Producto 2</h2>
-    <img src="assets/Images/Product1.png" alt="Servicio">
-    <button class="product-button">Pedir</button>
-  </div>
-  <div class="service-item">
-    <h2>Producto 3</h2>
-    <img src="assets/Images/Product1.png" alt="Servicio">
-    <button class="product-button">Pedir</button>
-  </div>
-</div>
+<app-header></app-header>
