--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,35 +1,55 @@
-.top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #949292;
-    padding: 10px;
+.navbar {
+    background-color: #343a40;
   }
   
-  .left-button {
-    margin-right: 10px; 
-    margin-left: 200px;  
-  }
-
-  .left-button img {
-    width: 24px;
-    height: 24px;  
+  .navbar-brand {
+    color: #000000;
   }
   
-  input[type="text"] {
-    flex-grow: 1;
-    margin-right: 200px;
-    padding: 5px;
-    border: none;
-    border-radius: 4px;
+  .navbar-nav .nav-link {
+    color: #000000;
   }
   
-  .right-buttons {
-    display: flex;
-    gap: 10px;
+  .navbar-nav .nav-link:hover {
+    color: #000000;
   }
   
-  .right-buttons button img {
-    width: 24px;
-    height: 24px;
+  .navbar-nav .nav-link.active {
+    font-weight: bold;
+    color: #000000;
+  }
+  
+  .navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
+  
+  .dropdown-menu {
+    background-color: #ffffff;
+  }
+  
+  .dropdown-item {
+    color: #000000; 
+  }
+  
+  .dropdown-item:hover {
+    background-color: #bdbdbd;
+  }
+  
+  .form-control {
+    margin-right: 10px;
+  }
+  
+  .btn-outline-success {
+    color: #000000;
+    border-color: #000000;
+  }
+  
+  .btn-outline-success:hover {
+    color: #ffffff;
+    background-color: #000000;
+    border-color: #ffffff;
   }
