--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #373737;
+    background-color: #1b421d;
     color: #fff;
     margin: 0;
     font-family: Arial, sans-serif;
