--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,10 +1,12 @@
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+      <!--Botones abajo Carousel-->
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
   </div>
   <div class="carousel-inner">
+        <!--Primera vista-->
     <div class="carousel-item">
       <img src="Images/Image 1.svg" class="d-block w-100" alt="First slide">
       <div class="container">
@@ -14,6 +16,7 @@
         </div>
       </div>
     </div>
+    <!--Segunda vista-->
     <div class="carousel-item active">
       <img src="Images/Image 2.svg" class="d-block w-100" alt="Second slide">
       <div class="container">
@@ -24,6 +27,7 @@
         </div>
       </div>
     </div>
+        <!--Tercera vista-->
     <div class="carousel-item">
       <img src="Images/Image 3.svg" class="d-block w-100" alt="Third slide">
       <div class="container">
@@ -35,6 +39,7 @@
       </div>
     </div>
   </div>
+    <!--Botones laterales Carousel-->
   <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
