--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="carousel-caption text-start">
           <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+          <p><a class="btn btn-lg btn-primary" href="#">Monstruos</a></p>
         </div>
       </div>
     </div>
