--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-header></app-header>
-<app-carousel></app-carousel>
-<app-hero></app-hero>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
