--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header><header class="p-3 text-bg-dark">
+<header class="p-3 text-bg-dark">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
     <!--Logo-->
@@ -6,17 +6,18 @@
 
        <!--Lista botones-->
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Monstruos</a></li>
+        <li><a href="/home" class="nav-link px-2 text-white">Inicio</a></li>
+        <li><a href="/monsters" class="nav-link px-2 text-white">Monstruos</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Cacerias</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Pelicula</a></li>
         <li><a href="#" class="nav-link px-2 text-white">About</a></li>
       </ul>
+
       <!--Barra busqueda-->
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="Buscar">
+        <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..." aria-label="Search">
       </form>
-      <button class="btn btn-outline-success" type="submit">Search</button>
+      <button class="btn btn-outline-success" type="submit">Buscar</button>
     </div>
   </div>
 </header>
