--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -5,14 +5,15 @@
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
   </div>
+  <!--Vistas del Carousel-->
   <div class="carousel-inner">
         <!--Primera vista-->
     <div class="carousel-item">
       <img src="Images/Image 1.svg" class="d-block w-100" alt="First slide">
       <div class="container">
         <div class="carousel-caption text-start">
-          <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Monstruos</a></p>
+          <p>Metete en nuestra enciclopedia y lee todo sobre los monstruos.</p>
+          <p><a class="btn btn-lg btn-primary" href="/monsters">Monstruos</a></p>
         </div>
       </div>
     </div>
@@ -21,9 +22,8 @@
       <img src="Images/Image 2.svg" class="d-block w-100" alt="Second slide">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Another example headline.</h1>
-          <p>Some representative placeholder content for the second slide of the carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+          <p>¿Quieres cazar algún monstruo grande y poderoso? Informate primero de las misiones que hay y busca tu favorita.</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Misiones</a></p>
         </div>
       </div>
     </div>
@@ -32,9 +32,8 @@
       <img src="Images/Image 3.svg" class="d-block w-100" alt="Third slide">
       <div class="container">
         <div class="carousel-caption text-end">
-          <h1>One more for good measure.</h1>
-          <p>Some representative placeholder content for the third slide of this carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+          <p>Monster hunter también tiene su propia pelicula. ¿Quieres informarte?</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Noticia</a></p>
         </div>
       </div>
     </div>
