--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,9 +8,9 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/home" class="nav-link px-2 text-white">Inicio</a></li>
         <li><a href="/monsters" class="nav-link px-2 text-white">Monstruos</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Cacerias</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Misiones</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Pelicula</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Equipamiento</a></li>
       </ul>
 
       <!--Barra busqueda-->
