--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,14 +1,14 @@
-  <div class="hero-content">
+<div class="hero-content">
 <div class="container my-5">
 <div class="row  pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg">
       <!--Texto-->
     <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-      <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Border hero with cropped image and shadows</h1>
-      <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Equipate para ser capaz de todo</h1>
+      <p class="lead">Busca cualquier arma o armadura que necesites, esto te ayudará a ir bien preparado a cualquier misión y ser capaz de vencer hasta al peor de los dragones. Accede rápido a toda la información que necesites para equiparte gracias a nuestra página.</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
       <!--Botones-->
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Armas</button>
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Armaduras</button>
       </div>
     </div>
     <!--Imagen-->
