pagina y api al completo

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,22 +1,20 @@
 <div class="hero-content">
-<div class="container my-5">
-<div class="row  pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg">
-      <!--Texto-->
-    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-      <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Equipate para ser capaz de todo</h1>
-      <p class="lead">Busca cualquier arma o armadura que necesites, esto te ayudará a ir bien preparado a cualquier misión y ser capaz de vencer hasta al peor de los dragones. Accede rápido a toda la información que necesites para equiparte gracias a nuestra página.</p>
-      <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-      <!--Botones-->
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Armas</button>
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Armaduras</button>
+  <div class="container my-5">
+    <div class="row pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg">
+      <!-- Texto -->
+      <div class="col-12 col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Equipate para ser capaz de todo</h1>
+        <p class="lead">Busca cualquier arma o armadura que necesites, esto te ayudará a ir bien preparado a cualquier misión del juego. Vence hasta al peor de los dragones gracias a nuestra página, donde podrás acceder rápido a toda la información que necesites para equiparte.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+          <!-- Botones -->
+          <a href="/equipment" class="btn btn-primary btn-lg">Equipo</a>
+        </div>
+      </div>
+
+      <!-- Imagen -->
+      <div class="col-12 col-lg-5 p-0 overflow-hidden shadow-lg" style="max-height: 500px;">
+        <img class="rounded-lg-3 w-100 h-100" src="Images/Hunter.svg" alt="Hunter" style="max-height: 500px; object-fit: cover; object-position: top;">
       </div>
     </div>
-    <!--Imagen-->
-    <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg" style="max-height: 500px;">
-      <img class="rounded-lg-3 w-100 h-100" src="Images/Hunter.svg" alt="Hunter" 
-           style="max-height: 500px; object-fit: cover; object-position: top;">
-  </div>
   </div>
 </div>
-</div>
-   
