--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,13 +1,14 @@
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-      <!--Botones abajo Carousel-->
+  <!-- Botones abajo Carousel -->
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
   </div>
-  <!--Vistas del Carousel-->
+
+  <!-- Vistas del Carousel -->
   <div class="carousel-inner">
-        <!--Primera vista-->
+    <!-- Primera vista -->
     <div class="carousel-item">
       <img src="Images/Image 1.svg" class="d-block w-100" alt="First slide">
       <div class="container">
@@ -17,28 +18,31 @@
         </div>
       </div>
     </div>
-    <!--Segunda vista-->
+
+    <!-- Segunda vista -->
     <div class="carousel-item active">
       <img src="Images/Image 2.svg" class="d-block w-100" alt="Second slide">
       <div class="container">
         <div class="carousel-caption">
-          <p>¿Quieres cazar algún monstruo grande y poderoso? Informate primero de las misiones que hay y busca tu favorita.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Misiones</a></p>
+          <p>¿Quieres cazar algún monstruo grande y poderoso? Infórmate primero de las misiones que hay y busca tu favorita.</p>
+          <p><a class="btn btn-lg btn-primary" href="/events">Misiones</a></p>
         </div>
       </div>
     </div>
-        <!--Tercera vista-->
+
+    <!-- Tercera vista -->
     <div class="carousel-item">
       <img src="Images/Image 3.svg" class="d-block w-100" alt="Third slide">
       <div class="container">
         <div class="carousel-caption text-end">
-          <p>Monster hunter también tiene su propia pelicula. ¿Quieres informarte?</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Noticia</a></p>
+          <p>Monster hunter también tiene su propia película. ¿Quieres informarte?</p>
+          <p><a class="btn btn-lg btn-primary" href="/film">Noticia</a></p>
         </div>
       </div>
     </div>
   </div>
-    <!--Botones laterales Carousel-->
+
+  <!-- Botones laterales Carousel -->
   <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
