--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,8 +9,8 @@
 
     <!-- Botones de navegación -->
     <ul class="nav col-12 col-md-4 justify-content-center justify-content-md-end">
-      <li class="nav-item"><a href="/home" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="/monters" class="nav-link px-2 text-body-secondary">Monstruos</a></li>
+      <li class="nav-item"><a href="/home" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+      <li class="nav-item"><a href="/monsters" class="nav-link px-2 text-body-secondary">Monstruos</a></li>
       <li class="nav-item"><a href="/events" class="nav-link px-2 text-body-secondary">Misiones</a></li>
       <li class="nav-item"><a href="/film" class="nav-link px-2 text-body-secondary">Pelicula</a></li>
       <li class="nav-item"><a href="/equipment" class="nav-link px-2 text-body-secondary">Equipamiento</a></li>
