--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,15 @@
         <li><a href="/film" class="nav-link px-2 text-white">Pelicula</a></li>
         <li><a href="/equipment" class="nav-link px-2 text-white">Equipamiento</a></li>
       </ul>
+      <!--Cuenta-->
+      <div class="dropdown text-end">
+        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="Images/Perfil.svg" alt="mdo" width="47" height="47" class="rounded-circle">
+        </a>
+        <ul class="dropdown-menu text-small">
+     <li><a class="dropdown-item" href="/createAccount">Crear cuenta</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </header>
