--- a/documentation/components/FooterComponent.html
+++ b/documentation/components/FooterComponent.html
@@ -203,21 +203,24 @@ export class FooterComponent {
 
     <div class="tab-pane fade " id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;container&quot;&gt;
-    &lt;footer class&#x3D;&quot;d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top&quot;&gt;
-      &lt;p class&#x3D;&quot;col-md-4 mb-0 text-body-secondary&quot;&gt;© 2025 Company, Inc&lt;/p&gt;
-  
-      &lt;a href&#x3D;&quot;/&quot; class&#x3D;&quot;col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none&quot;&gt;
-        &lt;svg class&#x3D;&quot;bi me-2&quot; width&#x3D;&quot;40&quot; height&#x3D;&quot;32&quot;&gt;&lt;use xlink:href&#x3D;&quot;#bootstrap&quot;&gt;&lt;/use&gt;&lt;/svg&gt;
-      &lt;/a&gt;
-      &lt;ul class&#x3D;&quot;nav col-md-4 justify-content-end&quot;&gt;
-        &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;
-        &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Monstruos&lt;/a&gt;&lt;/li&gt;
-        &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Cacerias&lt;/a&gt;&lt;/li&gt;
-        &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Pelicula&lt;/a&gt;&lt;/li&gt;
-        &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;About&lt;/a&gt;&lt;/li&gt;
-      &lt;/ul&gt;
-    &lt;/footer&gt;
-  &lt;/div&gt;</code></pre>
+  &lt;!-- footer --&gt;
+  &lt;footer class&#x3D;&quot;d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top&quot;&gt;
+    &lt;p class&#x3D;&quot;col-12 col-md-4 mb-0 text-body-secondary text-center text-md-start&quot;&gt;© 2025 Company, Inc&lt;/p&gt;
+
+    &lt;a href&#x3D;&quot;/&quot; class&#x3D;&quot;col-12 col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none&quot;&gt;
+      &lt;svg class&#x3D;&quot;bi me-2&quot; width&#x3D;&quot;40&quot; height&#x3D;&quot;32&quot;&gt;&lt;use xlink:href&#x3D;&quot;#bootstrap&quot;&gt;&lt;/use&gt;&lt;/svg&gt;
+    &lt;/a&gt;
+
+    &lt;!-- Botones de navegación --&gt;
+    &lt;ul class&#x3D;&quot;nav col-12 col-md-4 justify-content-center justify-content-md-end&quot;&gt;
+      &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;/home&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Inicio&lt;/a&gt;&lt;/li&gt;
+      &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;/monsters&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Monstruos&lt;/a&gt;&lt;/li&gt;
+      &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;/events&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Misiones&lt;/a&gt;&lt;/li&gt;
+      &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;/film&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Pelicula&lt;/a&gt;&lt;/li&gt;
+      &lt;li class&#x3D;&quot;nav-item&quot;&gt;&lt;a href&#x3D;&quot;/equipment&quot; class&#x3D;&quot;nav-link px-2 text-body-secondary&quot;&gt;Equipamiento&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/footer&gt;
+&lt;/div&gt;</code></pre>
     </div>
 
 
@@ -246,8 +249,8 @@ export class FooterComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="container">    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">      <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p>        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>      </a>      <ul class="nav col-md-4 justify-content-end">        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Monstruos</a></li>        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Cacerias</a></li>        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pelicula</a></li>        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>      </ul>    </footer>  </div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarouselComponent', 'selector': 'app-carousel'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HeroComponent', 'selector': 'app-hero'}];
+        var COMPONENT_TEMPLATE = '<div><div class="container">  <!-- footer -->  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">    <p class="col-12 col-md-4 mb-0 text-body-secondary text-center text-md-start">© 2025 Company, Inc</p>    <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>    </a>    <!-- Botones de navegación -->    <ul class="nav col-12 col-md-4 justify-content-center justify-content-md-end">      <li class="nav-item"><a href="/home" class="nav-link px-2 text-body-secondary">Inicio</a></li>      <li class="nav-item"><a href="/monsters" class="nav-link px-2 text-body-secondary">Monstruos</a></li>      <li class="nav-item"><a href="/events" class="nav-link px-2 text-body-secondary">Misiones</a></li>      <li class="nav-item"><a href="/film" class="nav-link px-2 text-body-secondary">Pelicula</a></li>      <li class="nav-item"><a href="/equipment" class="nav-link px-2 text-body-secondary">Equipamiento</a></li>    </ul>  </footer></div></div>'
+    var COMPONENTS = [{'name': 'Album2Component', 'selector': 'app-album2'},{'name': 'Album3Component', 'selector': 'app-album3'},{'name': 'AlbumComponent', 'selector': 'app-album'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarouselComponent', 'selector': 'app-carousel'},{'name': 'CreateAccountComponent', 'selector': 'app-create-account'},{'name': 'EquipmentComponent', 'selector': 'app-equipment'},{'name': 'EventsComponent', 'selector': 'app-events'},{'name': 'FilmComponent', 'selector': 'app-film'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'FormComponent', 'selector': 'app-form'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HeroComponent', 'selector': 'app-hero'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'JumbotronComponent', 'selector': 'app-jumbotron'},{'name': 'MonstersComponent', 'selector': 'app-monsters'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'FooterComponent'};
 </script>
