--- a/documentation/components/HeaderComponent.html
+++ b/documentation/components/HeaderComponent.html
@@ -202,7 +202,7 @@ export class HeaderComponent {
     </div>
 
     <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;header&gt;&lt;header class&#x3D;&quot;p-3 text-bg-dark&quot;&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;header class&#x3D;&quot;p-3 text-bg-dark&quot;&gt;
   &lt;div class&#x3D;&quot;container&quot;&gt;
     &lt;div class&#x3D;&quot;d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start&quot;&gt;
     &lt;!--Logo--&gt;
@@ -210,17 +210,21 @@ export class HeaderComponent {
 
        &lt;!--Lista botones--&gt;
       &lt;ul class&#x3D;&quot;nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0&quot;&gt;
-        &lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-secondary&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Monstruos&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Cacerias&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Pelicula&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;About&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href&#x3D;&quot;/home&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Inicio&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href&#x3D;&quot;/monsters&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Monstruos&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href&#x3D;&quot;/events&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Misiones&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href&#x3D;&quot;/film&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Pelicula&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href&#x3D;&quot;/equipment&quot; class&#x3D;&quot;nav-link px-2 text-white&quot;&gt;Equipamiento&lt;/a&gt;&lt;/li&gt;
       &lt;/ul&gt;
-      &lt;!--Barra busqueda--&gt;
-      &lt;form class&#x3D;&quot;col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3&quot; role&#x3D;&quot;search&quot;&gt;
-        &lt;input type&#x3D;&quot;search&quot; class&#x3D;&quot;form-control form-control-dark text-bg-dark&quot; placeholder&#x3D;&quot;Search...&quot; aria-label&#x3D;&quot;Search&quot;&gt;
-      &lt;/form&gt;
-      &lt;button class&#x3D;&quot;btn btn-outline-success&quot; type&#x3D;&quot;submit&quot;&gt;Search&lt;/button&gt;
+      &lt;!--Cuenta--&gt;
+      &lt;div class&#x3D;&quot;dropdown text-end&quot;&gt;
+        &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;d-block link-body-emphasis text-decoration-none dropdown-toggle&quot; data-bs-toggle&#x3D;&quot;dropdown&quot; aria-expanded&#x3D;&quot;false&quot;&gt;
+          &lt;img src&#x3D;&quot;Images/Perfil.svg&quot; alt&#x3D;&quot;mdo&quot; width&#x3D;&quot;47&quot; height&#x3D;&quot;47&quot; class&#x3D;&quot;rounded-circle&quot;&gt;
+        &lt;/a&gt;
+        &lt;ul class&#x3D;&quot;dropdown-menu text-small&quot;&gt;
+     &lt;li&gt;&lt;a class&#x3D;&quot;dropdown-item&quot; href&#x3D;&quot;/createAccount&quot;&gt;Crear cuenta&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/header&gt;</code></pre>
@@ -252,8 +256,8 @@ export class HeaderComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><header><header class="p-3 text-bg-dark">  <div class="container">    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">    <!--Logo-->   <img src="Images/Logo.svg" alt="" width="72" height="72">       <!--Lista botones-->      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>        <li><a href="#" class="nav-link px-2 text-white">Monstruos</a></li>        <li><a href="#" class="nav-link px-2 text-white">Cacerias</a></li>        <li><a href="#" class="nav-link px-2 text-white">Pelicula</a></li>        <li><a href="#" class="nav-link px-2 text-white">About</a></li>      </ul>      <!--Barra busqueda-->      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">        <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">      </form>      <button class="btn btn-outline-success" type="submit">Search</button>    </div>  </div></header></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarouselComponent', 'selector': 'app-carousel'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HeroComponent', 'selector': 'app-hero'}];
+        var COMPONENT_TEMPLATE = '<div><header class="p-3 text-bg-dark">  <div class="container">    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">    <!--Logo-->   <img src="Images/Logo.svg" alt="" width="72" height="72">       <!--Lista botones-->      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">        <li><a href="/home" class="nav-link px-2 text-white">Inicio</a></li>        <li><a href="/monsters" class="nav-link px-2 text-white">Monstruos</a></li>        <li><a href="/events" class="nav-link px-2 text-white">Misiones</a></li>        <li><a href="/film" class="nav-link px-2 text-white">Pelicula</a></li>        <li><a href="/equipment" class="nav-link px-2 text-white">Equipamiento</a></li>      </ul>      <!--Cuenta-->      <div class="dropdown text-end">        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">          <img src="Images/Perfil.svg" alt="mdo" width="47" height="47" class="rounded-circle">        </a>        <ul class="dropdown-menu text-small">     <li><a class="dropdown-item" href="/createAccount">Crear cuenta</a></li>        </ul>      </div>    </div>  </div></header></div>'
+    var COMPONENTS = [{'name': 'Album2Component', 'selector': 'app-album2'},{'name': 'Album3Component', 'selector': 'app-album3'},{'name': 'AlbumComponent', 'selector': 'app-album'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarouselComponent', 'selector': 'app-carousel'},{'name': 'CreateAccountComponent', 'selector': 'app-create-account'},{'name': 'EquipmentComponent', 'selector': 'app-equipment'},{'name': 'EventsComponent', 'selector': 'app-events'},{'name': 'FilmComponent', 'selector': 'app-film'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'FormComponent', 'selector': 'app-form'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HeroComponent', 'selector': 'app-hero'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'JumbotronComponent', 'selector': 'app-jumbotron'},{'name': 'MonstersComponent', 'selector': 'app-monsters'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'HeaderComponent'};
 </script>
